--- a/Giaodien/css/styles.css
+++ b/Giaodien/css/styles.css
@@ -10308,37 +10308,88 @@ body {
 }
 
 /* Timeline */
-
-ul.timeline {
+.timeline {
   list-style-type: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.li {
+  transition: all 200ms ease-in;
+}
+
+.timestamp {
+  margin-bottom: 20px;
+  padding: 0px 40px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-weight: 100;
+}
+
+.status {
+  padding: 0px 5px;
+  display: flex;
+  justify-content: center;
+  border-top: 2px solid #D6DCE0;
   position: relative;
+  transition: all 200ms ease-in;
 }
-ul.timeline:before {
-  content: ' ';
-  background: #d4d9df;
-  display: inline-block;
+.status p {
+  font-weight: 600;
+  margin-top: 10px;
+}
+.status:before {
+  content: "";
+  width: 25px;
+  height: 25px;
+  background-color: white;
+  border-radius: 25px;
+  border: 1px solid #ddd;
   position: absolute;
-  left: 29px;
-  width: 2px;
-  height: 100%;
-  z-index: 400;
+  top: -15px;
+  left: 42%;
+  transition: all 200ms ease-in;
 }
-ul.timeline > li {
-  margin: 20px 0;
-  padding-left: 20px;
+
+.li.complete .status {
+  border-top: 2px solid #66DC71;
 }
-ul.timeline > li:before {
-  content: ' ';
-  background: white;
-  display: inline-block;
-  position: absolute;
-  border-radius: 50%;
-  border: 3px solid #22c0e8;
-  left: 20px;
-  width: 20px;
-  height: 20px;
-  z-index: 400;
+.li.complete .status:before {
+  background-color: #66DC71;
+  border: none;
+  transition: all 200ms ease-in;
 }
+.li.complete .status h4 {
+  color: #66DC71;
+}
+
+@media (min-device-width: 320px) and (max-device-width: 700px) {
+  .timeline {
+    list-style-type: none;
+    display: block;
+  }
+
+  .li {
+    transition: all 200ms ease-in;
+    display: flex;
+    width: inherit;
+  }
+
+  .timestamp {
+    width: 100px;
+  }
+
+  .status:before {
+    left: -8%;
+    top: 30%;
+    transition: all 200ms ease-in;
+  }
+}
+
+
+/* Input */
 
 .input-material{
   font-size:13px;
@@ -10391,4 +10442,30 @@ ul.timeline > li:before {
 .simple-pagination .next.current {
 	background: #0275d8;
   border: 1px solid #EEE;
+}
+
+/* Chat */
+.chat-header {
+  padding: 2px;
+  border-bottom: 2px solid white;
+}
+  img {
+    float: left;
+    width: 50px;
+    height: 50px;
+    border-radius: 25px;
+  }
+.chat-about {
+  float: left;
+  padding-left: 10px;
+  margin-top: 6px;
+}
+
+.chat-with {
+  font-weight: bold;
+  font-size: 16px;
+}
+
+.chat-num-messages {
+  color: gray;
 }
