--- a/Giaodien/css/styles.css
+++ b/Giaodien/css/styles.css
@@ -10469,3 +10469,17 @@ body {
 .chat-num-messages {
   color: gray;
 }
+
+/* Tag friend */
+.mention_name{
+	font-size:12px;
+  color: #111;
+	}
+.mention_username{
+	font-size:12px;
+	color:#111;
+	}
+
+.active .mention_username{
+	color:#111;
+	}
