--- a/Giaodien/css/styles.css
+++ b/Giaodien/css/styles.css
@@ -10483,3 +10483,112 @@ body {
 .active .mention_username{
 	color:#111;
 	}
+/*==== STEP ROW ===*/
+.steps-form {
+  display: table;
+  width: 100%;
+  position: relative;
+}
+
+  .steps-form .steps-row {
+      display: table-row;
+  }
+
+      .steps-form .steps-row:before {
+          top: 14px;
+          bottom: 0;
+          position: absolute;
+          content: " ";
+          width: 100%;
+          height: 1px;
+          background-color: #ccc;
+      }
+
+      .steps-form .steps-row .steps-step {
+          display: table-cell;
+          text-align: center;
+          position: relative;
+      }
+
+          .steps-form .steps-row .steps-step p {
+              margin-top: 0.5rem;
+          }
+
+          .steps-form .steps-row .steps-step button[disabled] {
+              opacity: 1 !important;
+              filter: alpha(opacity=100) !important;
+          }
+
+          .steps-form .steps-row .steps-step .btn-circle {
+              width: 30px;
+              height: 30px;
+              text-align: center;
+              padding: 6px 0;
+              font-size: 12px;
+              line-height: 1.428571429;
+              border-radius: 15px;
+              margin-top: 0;
+          }
+/*===STEP COL====*/
+.StepProgress {
+  position: relative;
+  padding-left: 45px;
+  list-style: none;
+  counter-reset: progress;
+}
+
+  .StepProgress::before {
+      display: inline-block;
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 6px;
+      width: 10px;
+      height: 100%;
+      border-left: 1px solid #CCC;
+  }
+
+.StepProgress-item {
+  position: relative;
+  counter-increment: progress;
+}
+
+  .StepProgress-item:not(:last-child) {
+      padding-bottom: 20px;
+  }
+
+  .StepProgress-item::before {
+      display: inline-block;
+      content: '';
+      position: absolute;
+      height: 100%;
+      width: 10px;
+  }
+
+  .StepProgress-item::after {
+      content: '';
+      display: inline-block;
+      position: absolute;
+      top: 0;
+      left: -45px;
+      width: 10px;
+      height: 10px;
+      border: 1px solid #CCC;
+      border-radius: 50%;
+      background-color: #0094cc;
+      color: #0094cc;
+  }
+
+.StepProgress strong {
+  display: block;
+}
+pre {
+  font-family: Nunito,-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif,"Apple Color Emoji","Segoe UI Emoji","Segoe UI Symbol","Noto Color Emoji";
+}
+.active-step{
+  border: 1px solid black;
+}
+.list-approve{
+  list-style: none;
+}
+/*====*/
